--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
     "aos": "^2.3.4",
+    "lucide-vue-next": "^0.525.0",
     "tailwindcss": "^4.1.7",
     "vue": "^3.5.13",
     "vue-i18n": "^11.1.9",
